starte describing format for phrase grounding results

--- a/templates/evaluation_details.html
+++ b/templates/evaluation_details.html
@@ -1,1 +1,5 @@
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"We propose two subtasks for evaluation: phrase grounding and VQA. You may submit results for one or both of these tasks. "</p>
+
+<h2>Phrase Grounding</h2>
+
+<p>"Predictions are expected in json format with a key for every image id in the eavluation set "<p>
